Fix wrong margin left in folders with long names

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -426,7 +426,7 @@ header span, header label, header .open_in_chrome_btn {
 }
 
 .folder_arrow_placeholder {
-    width: 23px;
+    margin-left: 23px;
 }
 
 .work_folder_path, .folder_name {
